--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="positioning">
-          <a href="#home">Home</a>
-          <a href="#mission">Menu</a>
-          <a href="#about-us">Coffee</a>
-          <a href="#our-team">Our Story</a>
-        </nav>
-      </header>
-  
-</body>
+      <nav class="container">
+        <img class="logo" src="/img/logo.svg" alt="Coffee logo" />
+        <a href="#home">Home</a>
+        <a href="#mission">Menu</a>
+        <a href="#about-us">Coffee</a>
+        <a href="#our-team">Our Story</a>
+      </nav>
+    </header>
+  </body>
+  Hello
 </html>
