--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,47 @@
   </head>
   <body>
     <header>
-      <nav class="container">
-        <img class="logo" src="/img/logo.svg" alt="Coffee logo" />
-        <a href="#home">Home</a>
-        <a href="#mission">Menu</a>
-        <a href="#about-us">Coffee</a>
-        <a href="#our-team">Our Story</a>
+      <nav class="header-container">
+        <img class="header-logo" src="/img/logo.svg" alt="Coffee logo" />
+        <div class="header-links">
+          <a href="#home">Home</a>
+          <a href="#mission">Menu</a>
+          <a href="#about-us">Coffee</a>
+          <a href="#our-team">Our Story</a>
+        </div>
       </nav>
     </header>
   </body>
-  Hello
+  <main >
+    <h1>Generic Hipster Coffee</h1>
+    <h2>Specialty coffee, fresh food & local community.</h2>
+
+    <h3>Opening hours</h3>
+    <p>sunday to thursday: 8 am to 11 pm</p>
+    <p>friday to saturday: 8 am to 1 am</p>
+
+    <h3>Book a table</h3>
+    <p>Call +1 415-321-4567</p>
+
+    <h3>Address</h3>
+    <p>321 Ivy St.San Francisco, CA 94102</p>
+  </main>
+
+  <footer>
+    <nav class="footer-container">
+      <div class="footer-links">
+        <a class="footer-links-a" href="#home">Home</a>
+        <a class="footer-links-a" href="#mission">Menu</a>
+        <a class="footer-links-a" href="#about-us">Coffee</a>
+        <a class="footer-links-a" href="#our-team">Our Story</a>
+      </div>
+    </nav>
+    <nav class="footer-info">
+      <h3>#HIPSTERMAKECOFFEE</h3>
+      <p>
+        Follow us on <a href="http://google.com">Twitter</a> and
+        <a href="http://google.com"></a>Instagram
+      </p>
+    </nav>
+  </footer>
 </html>
