home without map

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -20,19 +25,25 @@
       </nav>
     </header>
   </body>
-  <main >
+  <main>
     <h1>Generic Hipster Coffee</h1>
     <h2>Specialty coffee, fresh food & local community.</h2>
-
-    <h3>Opening hours</h3>
-    <p>sunday to thursday: 8 am to 11 pm</p>
-    <p>friday to saturday: 8 am to 1 am</p>
-
-    <h3>Book a table</h3>
-    <p>Call +1 415-321-4567</p>
-
-    <h3>Address</h3>
-    <p>321 Ivy St.San Francisco, CA 94102</p>
+    <img class="counter" src="/img/counter.jpg" alt="coffee-shop" />
+    <div class="info-container">
+      <div class="info-container-open">
+        <h3>Opening hours</h3>
+        <p>sunday to thursday: 8 am to 11 pm</p>
+        <p>friday to saturday: 8 am to 1 am</p>
+      </div>
+      <div class="info-container-book">
+        <h3>Book a table</h3>
+        <p>Call +1 415-321-4567</p>
+      </div>
+      <div class="info-container-address">
+        <h3>Address</h3>
+        <p>321 Ivy St.San Francisco, CA 94102</p>
+      </div>
+    </div>
   </main>
 
   <footer>
@@ -48,7 +59,7 @@
       <h3>#HIPSTERMAKECOFFEE</h3>
       <p>
         Follow us on <a href="http://google.com">Twitter</a> and
-        <a href="http://google.com"></a>Instagram
+        <a href="http://google.com">Instagram</a>
       </p>
     </nav>
   </footer>
