footer for our story

--- a/src/story.html
+++ b/src/story.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/menustyle.css" />
+    <link rel="stylesheet" href="/css/story.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
@@ -13,36 +13,48 @@
     />
   </head>
   <body>
-    <header>
-      <nav class="header-container">
-        <img class="header-logo" src="/img/logo.svg" alt="Coffee logo" />
-        <div class="header-links">
-          <a href="index.html">Home</a>
-          <a href="menu.html">Menu</a>
-          <a href="coffee.html">Coffee</a>
-          <a href="story.html">Our Story</a>
-        </div>
-      </nav>
-    </header>
+    <div class="page-container">
+      <header>
+        <nav class="header-container">
+          <img class="header-logo" src="/img/logo.svg" alt="Coffee logo" />
+          <div class="header-links">
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="coffee.html">Coffee</a>
+            <a href="story.html">Our Story</a>
+          </div>
+        </nav>
+      </header>
 
-    <main>STORY</main>
-
-    <footer>
-      <nav class="footer-container">
-        <div class="footer-links">
-          <a class="footer-links-a" href="index.html">Home</a>
-          <a class="footer-links-a" href="menu.html">Menu</a>
-          <a class="footer-links-a" href="coffee.html">Coffee</a>
-          <a class="footer-links-a" href="story.html">Our Story</a>
-        </div>
-      </nav>
-      <nav class="footer-info">
-        <h3>#HIPSTERMAKECOFFEE</h3>
+      <main>
+        <h1>Our story</h1>
         <p>
-          Follow us on <a href="http://google.com">Twitter</a> and
-          <a href="http://google.com">Instagram</a>
+          GHC started as a project of two friends and passionate baristas, John
+          & Don in 2010. Believing as much in the hand of an educated barista as
+          in the innovative equipment of the our ever-growing industry, GHC
+          offers a full spectrum of brewing opportunities – from pour overs to
+          syphon pots to finely executed espresso beverages. Each cup of coffee
+          is made with love, precision and care.
         </p>
-      </nav>
-    </footer>
+      </main>
+
+      <footer>
+        <nav class="footer-container">
+          <div class="footer-links">
+            <a class="footer-links-a" href="index.html">Home</a>
+            <a class="footer-links-a" href="menu.html">Menu</a>
+            <a class="footer-links-a" href="coffee.html">Coffee</a>
+            <a class="footer-links-a" href="story.html">Our Story</a>
+          </div>
+        </nav>
+        <nav class="footer-info">
+          <h3>#HIPSTERMAKECOFFEE</h3>
+          <p>
+            Follow us on <a href="http://google.com">Twitter</a> and
+            <a href="http://google.com">Instagram</a>
+          </p>
+        </nav>
+      </footer>
+    </div>
   </body>
 </html>
