--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Generic Hipster Coffee</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -69,7 +69,8 @@
       </div>
       <div class="info-container-address">
         <h3>Address</h3>
-        <p>321 Ivy St.San Francisco, CA 94102</p>
+        <p>321 Ivy</p>
+        <p>St.San Francisco, CA 94102</p>
       </div>
     </div>
     <h3>My Google Maps Demo</h3>
