--- a/src/coffee.html
+++ b/src/coffee.html
@@ -31,9 +31,10 @@
         We work with specialty coffee from current crops which is carefully
         roasted. Our coffee is fruity, juicy and never boring. We bring you the
         best from leading european specialty roasteries, currently mostly from
-        <a href="https://shop.squaremilecoffee.com/">Square Mile Coffee Roasters</a>, a multi award winning coffee roasting
-        company based in East London. You can currently buy these beans in 350g
-        bags
+        <a href="https://shop.squaremilecoffee.com/"
+          >Square Mile Coffee Roasters</a
+        >, a multi award winning coffee roasting company based in East London.
+        You can currently buy these beans in 350g bags
       </p>
 
       <section class="menu">
@@ -71,7 +72,7 @@
         </div>
         <div class="decaf">
           <h4>Decaf Espresso (El Salvador)</h4>
-          <img src="/img/decaf-espresso.jpg" alt="decaf espresso">
+          <img src="/img/decaf-espresso.jpg" alt="decaf espresso" />
           <p><em>caramel/apple/cinnamon </em></p>
           <p>
             This is a single origin espresso from San Carlos in El Salvador,
