--- a/src/menu.html
+++ b/src/menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Generic Hipster Coffee</title>
-    <link rel="stylesheet" href="/css/menustyle.css" />
+    <link rel="stylesheet" href="/css/menu.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
@@ -13,7 +13,6 @@
     />
   </head>
   <body>
-      
     <header>
       <nav class="header-container">
         <img class="header-logo" src="/img/logo.svg" alt="Coffee logo" />
@@ -27,14 +26,309 @@
     </header>
 
     <main>
-    <iframe
+      <!-- <iframe
     src="/img/menu-print-A3-final.pdf"
     frameBorder="0"
     scrolling="auto"
     height="100%"
     width="100%"
-></iframe>
+></iframe> -->
+      <span><h1>Menu</h1></span>
+      <div class="menu">
+        <section class="menu-container">
+          <h2 class="body-container">ESPRESSO COFFEE</h2>
+          <div>
+            <p class="name">Espresso</p>
+            <p class="price">3.8</p>
+          </div>
+          <div>
+            <p class="name">Double espresso</p>
+            <p class="price">4.9</p>
+          </div>
+          <div>
+            <p class="name">Americano</p>
+            <p class="price">5</p>
+          </div>
+          <div>
+            <p class="name">Espresso machiato</p>
+            <p class="price">4.3</p>
+          </div>
+          <div>
+            <p class="name">Cappuccino</p>
+            <p class="price">5.2</p>
+          </div>
+          <div>
+            <p class="name">Flat White</p>
+            <p class="price">5.9</p>
+          </div>
+          <div>
+            <p class="name">Latte</p>
+            <p class="price">5.9</p>
+          </div>
+          <div>
+            <p class="name">Extra shot</p>
+            <p class="price">1.1</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">FILTER COFFEE</h2>
 
+          <div>
+            <p class="name">House Drip Coffee</p>
+            <p class="price">4.5</p>
+          </div>
+          <div>
+            <p class="name">Aeropress</p>
+            <p class="name">5.5</p>
+          </div>
+          <div>
+            <p class="name">V60</p>
+            <p class="name">6.5</p>
+          </div>
+          <div>
+            <p class="name">Kalita</p>
+            <p class="price">12</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">COFFEE SPECIALITES</h2>
+          <div>
+            <p class="name">Cascara</p>
+            <p class="price">4.9</p>
+          </div>
+          <div>
+            <p class="name">Irish coffee</p>
+            <p class="price">10.9</p>
+          </div>
+          <h2 class="body-container">ICED</h2>
+          <div>
+            <p class="name">Iced Latte</p>
+            <p class="price">6.9</p>
+          </div>
+          <div>
+            <p class="name">Espresso on the rock</p>
+            <p class="price">4.9</p>
+          </div>
+          <div>
+            <p class="name">Iced Cascara</p>
+            <p class="price">5.5</p>
+          </div>
+          <div>
+            <p class="name">Affogato</p>
+            <p class="name">5.9</p>
+          </div>
+          <div>
+            <p class="name">Iced Flat white</p>
+            <p class="price">5.9</p>
+          </div>
+          <div>
+            <p class="name">Iced Filter</p>
+            <p class="price">5.8</p>
+          </div>
+          <div>
+            <p class="name">Iced tea</p>
+            <p class="price">4.9</p>
+          </div>
+          <div>
+            <p class="name">Iced chocolate</p>
+            <p class="price">6.2</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">HOT</h2>
+          <div>
+            <p class="name">Tea</p>
+            <p class="price">4.9</p>
+          </div>
+          <div>
+            <p class="name">Ginger tea</p>
+            <p class="price">4.5</p>
+          </div>
+          <div>
+            <p class="name">Hot chocolate</p>
+            <p class="price">4.5</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">SOMETHING TO EAT</h2>
+          <div>
+            <p class="name">Soup of the day</p>
+            <p class="price">5.8</p>
+          </div>
+          <div>
+            <p class="name">Chipotle Citrus Chicken Sandwich</p>
+            <p class="price">5.4</p>
+          </div>
+          <div>
+            <p class="name">Avocado Toast</p>
+            <p class="price">5.6</p>
+          </div>
+          <div>
+            <p class="name">Super BLT Sandwich</p>
+            <p class="price">12.8</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">SWEETS</h2>
+          <div>
+            <p class="name">Homemade cakes of the day</p>
+            <p class="price">5</p>
+          </div>
+          <div>
+            <p class="name">Key Lime and Coconut</p>
+            <p class="price">1.5</p>
+          </div>
+          <div>
+            <p class="name">Icecream</p>
+            <p class="price">2</p>
+          </div>
+          <div>
+            <p class="name">Tiramisu</p>
+            <p class="price">6</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">NON-ALCOHOLIC BEVERAGES</h2>
+
+          <h2 class="body-container">LEMONADES</h2>
+          <div>
+            <p class="name">Fresh Squeezed Lemonade</p>
+            <p class="price">5</p>
+          </div>
+          <div>
+            <p class="name">Ginger Lemonade</p>
+            <p class="price">4.5</p>
+          </div>
+          <div>
+            <p class="name">Cascara Fizz Original</p>
+            <p class="price">5.8</p>
+          </div>
+          <div>
+            <p class="name">Club-mate Cola</p>
+            <p class="price">4.5</p>
+          </div>
+          <div>
+            <p class="name">Tonic Thomas Henry</p>
+            <p class="price">4.3</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">WATER</h2>
+          <div>
+            <p class="name">Sparkling</p>
+            <p class="price">2.4</p>
+          </div>
+          <div>
+            <p class="name">Still</p>
+            <p class="price">2.4</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">ALCOHOLIC BEVERAGES</h2>
+
+          <h2 class="body-container">BEER</h2>
+          <div>
+            <p class="name">Small breweries on tap</p>
+            <p class="price">3.5</p>
+          </div>
+          <div>
+            <p class="name">Birell (bottled)</p>
+            <p class="price">3.5</p>
+          </div>
+          <div>
+            <p class="name">Cider Magnetic Apple</p>
+            <p class="price">4.5</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">WHITE WINE</h2>
+          <div>
+            <p class="name">Chardonnay Les Vignes de L'Arque, France</p>
+            <p class="price">3.5</p>
+          </div>
+          <div>
+            <p class="name">Sauvignon Blanc, Château Le Sartre Blanc 2011</p>
+            <p class="price">3.8</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2>RED WINE</h2>
+
+          <div>
+            <p class="name">Cuvée Côtes du Rhône Vigneros de Caracterem</p>
+            <p>3.5</p>
+          </div>
+          <div>
+            <p class="name">
+              Cabernet Sauvignon, Château Tour du Roch-Milon 2011
+            </p>
+            <p>3.5</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">COCKTAILS</h2>
+          <div>
+            <p class="name">Gin Tonic</p>
+            <p>9</p>
+          </div>
+          <div>
+            <p class="name">Cuba Libre</p>
+            <p>9.9</p>
+          </div>
+          <div>
+            <p class="name">Mojito</p>
+            <p>9.9</p>
+          </div>
+        </section>
+        <section class="menu-container">
+          <h2 class="body-container">SPIRITS</h2>
+          <div>
+            <p class="name">Metaxa 12*</p>
+            <p>7.5</p>
+          </div>
+          <div>
+            <p class="name">Tullamore Dew</p>
+            <p>6.5</p>
+          </div>
+          <div>
+            <p class="name">Jameson Whiskey</p>
+            <p>6.5</p>
+          </div>
+          <div>
+            <p class="name">Bombay, Añejo Suave</p>
+            <p>6.8</p>
+          </div>
+          <div>
+            <p class="name">Ron Cubay, Añejo Suave</p>
+            <p>6.5</p>
+          </div>
+          <div>
+            <p class="name">Tequila, El Jimador, Reposado</p>
+            <p>6.2</p>
+          </div>
+          <div>
+            <p class="name">Vodka Finlandia</p>
+            <p>5.5</p>
+          </div>
+          <div>
+            <p class="name">Bailey's</p>
+            <p>5.5</p>
+          </div>
+          <div>
+            <p class="name">Jagermeister</p>
+            <p>5.5</p>
+          </div>
+          <div>
+            <p class="name">Graham's Tawny Porto</p>
+            <p>4</p>
+          </div>
+        </section>
+      </div>
+      <img
+        class="machine"
+        src="/img/machine.jpg"
+        alt="Espresso machine detail"
+      />
     </main>
 
     <footer>
